syntax = "proto3";

package eventpb; // Ensure this matches the generated Go package name

option go_package = "./proto"; // Updated to match the generated Go package

service EventService {
    rpc CreateEvent (EventRequest) returns (EventResponse);
    rpc UpdateDescription (UpdateDescriptionRequest) returns (UpdateDescriptionResponse);
    rpc GetAllEvent (Empty) returns(EventListResponse);
    rpc GetEventById (Id) returns(EventResponse);
    rpc GetEventByUserId (Empty) returns(EventListResponse);
    rpc GetEventByCategory (Category) returns(EventListResponse);
}

message EventRequest{
    string name = 1;
    string description = 2;
    string date_start = 3;
    string date_end = 4;
    string donation_type = 5;
}

message EventResponse {
    uint32 id = 1;
    string user_id = 2;
    string name = 3;
    string description = 4;
    string date_start = 5;
    string date_end = 6;
    string donation_type = 7;
}

message EventListResponse {
    repeated EventResponse events = 1;
}

message UpdateDescriptionRequest {
    uint32 id = 1;
    string description = 2;
}

message UpdateDescriptionResponse {
    uint32 id = 1;
    string user_id = 2;
    string name = 3;
    string description = 4;
    string date_start = 5;
    string date_end = 6;
    string donation_type = 7;
}

message Empty{
}

message Id{
    uint32 id = 1;
}

message UserId{
    string user_id = 1;
}

message Category{
    string category = 1;
}