syntax = "proto3";

package payment;

option go_package = "github.com/dharmasatrya/goodkarma/payment-service/proto";

service PaymentService {
    rpc CreateWallet (CreateWalletRequest) returns (CreateWalletResponse);
    rpc UpdateWalletBalance (UpdateWalletBalanceRequest) returns (UpdateWalleetBalanceResponse);
    rpc Withdraw (WithdrawRequest) returns (WithdrawResponse);
    rpc CreateInvoice (CreateInvoiceRequest) returns (CreateInvoiceResponse);
}

message CreateWalletRequest {
    string user_id = 1;
    string bank_account_name = 2;
    string bank_code = 3;
    string bank_account_number = 4;
}

message CreateWalletResponse {
    string id = 1;
    string user_id = 2;
    string bank_account_name = 3;
    string bank_code = 4;
    string bank_account_number = 5;
    uint32 amount = 6;
}

message UpdateWalletBalanceRequest {
    string id = 1;
    uint32 amount = 2;
    string type = 3;
}

message UpdateWalleetBalanceResponse {
    string id = 1;
    string user_id = 2;
    string bank_account_name = 3;
    string bank_code = 4;
    string bank_account_number = 5;
    uint32 amount = 6;
}

message WithdrawRequest {
    uint32 amount = 1;
}

message WithdrawResponse {
    string id = 1;
    string user_id = 2;
    string bank_account_name = 3;
    string bank_code = 4;
    string bank_account_number = 5;
    uint32 amount = 6;
}

message CreateInvoiceRequest {
    string user_id = 1;
    string external_id = 2;
    uint32 amount = 3;
    string description = 4;
}

message CreateInvoiceResponse {
    string invoice_url = 1;
}